tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__AdvancedSMDs-AAAAAAAAAAAAAAAAAAAKMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2608,
  "prerequisites": [
    1687
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To craft circuits from the crystal processor series and beyond, you'll need these.\n\nIf you use these to make a circuit tier lower than Crystal, it'll use 1/4 the amount compared to normal SMDs, and half the required time.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lAdvanced SMDs",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1687
  ],
  "rewards": [],
  "tasks": []
}
