tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__AlmostSuccess-AAAAAAAAAAAAAAAAAAALfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2941,
  "prerequisites": [
    2940
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now you only have to subside the naquadah from the solution. Hooray!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lAlmost Success",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2940
  ],
  "rewards": [],
  "tasks": []
}
