tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__AutomatedMining-AAAAAAAAAAAAAAAAAAAAyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 201,
  "prerequisites": [
    199,
    1213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The QED enables you to assemble the most convenient device for mining: The ender quarry.\n\nAs 0lafe says, \"This small black box is life-changing\" and \"Sympathy for the amount of dense obsidian plates you need.\"\n\nGuess you better get compressing!\n\n[warn]NOTE: It's best to place your quarry and markers on ore vein boundaries. This way you start getting ores right away, especially from planets.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lAutomated Mining",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    199,
    1213
  ],
  "rewards": [],
  "tasks": []
}
