tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__BeholdTheNetheri-AlYEP7f4T-KHgH8vicSXdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13256433337557620598,
  "prerequisites": [
    2599
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You didn't seriously think you only needed to do the Naquadah line in LuV did you? Well if so; better brace yourself for the Netherite line!\n\nDon't panic, it's a relatively straight-forward line so long as you can wrap your head around minor processing loops and percent based output. Fortunately you have a quest book to guide you through your initial setup.\n\nBe warned- you will need at least §2§lGrade 1 Purified Water§r and§5§l Naquadah Coils§r to make it through this entire line.\n\n§3This questline will start you off with the three primary things you must prepare in order to begin:\n\n§l- Milled Netherrack\n- Nether Air\n- Ancient Debris Collection§r\n\n§3For at least one and likely two of those you will need to journey into the nether, so make sure you're prepared equipment wise!§r\n\n[warn]If you already created the line and do not wish to complete the individual quests, hold one of these three item sets in your hand after completing this quest: [/warn]\n\n§4§l- 1 Dense Netherite Plate\n- 64 Intensely Bonded Netherite Nanoparticles\n- 16 Netherite Ingots ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lBehold: The Netherite Line",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2599
  ],
  "rewards": [],
  "tasks": []
}
