tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__BrittleNetherite-rlVdurFlSbuoWZAIUG0-aA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12782704186218069608,
  "prerequisites": [
    1346374596314195815,
    2534476883661913268
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You're so close... just a few more steps.\n\nNow that you've attained the Netherite Scrap Seeds, you can combine them with Poor Nether Waste in a §5§lChemical Bath§r for a §2§l50%§r chance to get 3 §4Brittle Netherite Scraps§r. As a bonus, there's even a §2§l50%§r chance that you get your Netherite Scrap Seed back to run the recipe over again. \n\n[note]Don't worry, this is the last Netherite recipe based on chance.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lBrittle Netherite Scrap",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1346374596314195815,
    2534476883661913268
  ],
  "rewards": [],
  "tasks": []
}
